--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "webpack-dev-server --mode=development --env.NODE_ENV=local"
+    "serve": "webpack-dev-server --mode=development --env.NODE_ENV=local",
+    "build": "webpack -p --env.NODE_ENV=production"
   },
   "author": "",
   "license": "ISC",
@@ -27,10 +28,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bulma": "^0.9.0",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-spinners": "^0.10.4",
     "styled-components": "^5.2.1"
-  }
+  },
+  "homepage": "https://kate1562.github.io/portfolio"
 }
