--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
+    "@svgr/webpack": "^5.5.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^3.5.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.3.0",
+    "react-svg-loader": "^3.0.3",
     "sass": "^1.32.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "svg-url-loader": "^7.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
@@ -35,6 +38,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-spinners": "^0.10.4",
+    "react-svg": "^13.0.3",
     "styled-components": "^5.2.1"
   },
   "homepage": "https://kate1562.github.io/portfolio"
