--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
+    "@iconify-icons/logos": "^1.1.9",
+    "@iconify-icons/vscode-icons": "^1.1.4",
+    "@iconify/react": "^1.1.4",
     "@svgr/webpack": "^5.5.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^3.5.3",
