--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-spinners": "^0.10.4",
     "react-svg": "^13.0.3",
