--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@iconify/react": "^1.1.4",
     "@svgr/webpack": "^5.5.0",
     "babel-loader": "^8.0.5",
-    "css-loader": "^3.5.3",
+    "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.3.0",
     "react-svg-loader": "^3.0.3",
@@ -39,10 +39,15 @@
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.11.5",
+    "react-hook-carousel": "^0.0.3",
     "react-icons": "^4.2.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
+    "react-slick": "^0.28.1",
     "react-spinners": "^0.10.4",
     "react-svg": "^13.0.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "svg-react-loader": "^0.4.6"
   },
